changes structure of keeping files.

--- a/reading7.tex
+++ b/reading7.tex
@@ -20,19 +20,15 @@ Vector Operations
 %--------------------------------------------------------------------------------
 \section{Where have you seen vectors used before in other courses? How were they different?}
 I have seen vectors in Calculus class and the biggest difference between those two vectors are:
-1. The vector form is different. \(<x,y,z>\) is used as a coordinate in Euclidean space.
-2. The vector \((x,y,z)\) always has an initial position in the Euclidean space.
+\begin{itemize}
+  \item The vector form is different. \(<x,y,z>\) is used as a coordinate in Euclidean \(m\)-space, but the vector taht I see in this chapter is used in vector space \(\mathbb{C}^m\)
+  \item The vector \((x,y,z)\) always has an initial position in the Euclidean space.
+\end{itemize}
 
 %--------------------------------------------------------------------------------
 \section{In words only, when are two vectors equal?}
-Two vectors are equal if and only if the magnitude and the direction are equal.
-Let \(A\) and \(B\) be vectors, and two vectors are equal if the resultant vector is same such that
-\begin{equation}
-  A-B=C
-\end{equation}
-\begin{equation}
-  B-A=C
-\end{equation}
+Two vectors are equal if the magnitude and the direction are equal, or
+two vectors are equal if every element in these two vectors in the positions of its column are equal.
 
 %--------------------------------------------------------------------------------
 \section{Perform the following computation with vector operations}
