--- a/reading7.tex
+++ b/reading7.tex
@@ -21,14 +21,14 @@ Vector Operations
 \section{Where have you seen vectors used before in other courses? How were they different?}
 I have seen vectors in Calculus class and the biggest difference between those two vectors are:
 \begin{itemize}
-  \item The vector form is different. \(<x,y,z>\) is used as a coordinate in Euclidean \(m\)-space, but the vector taht I see in this chapter is used in vector space \(\mathbb{C}^m\)
-  \item The vector \((x,y,z)\) always has an initial position in the Euclidean space.
+  \item The vector that I used in calculus class only includes real numbers, but the vectors that I have seen in this class includes complex numbers.
+  \item The vector form is different. \(<x,y,z>\) is used as a coordinate in Euclidean \(m\)-space, but vectors taht I see in this class is used in vector space \(\mathbb{C}^m\) and writing elements vertically.
 \end{itemize}
 
 %--------------------------------------------------------------------------------
 \section{In words only, when are two vectors equal?}
-Two vectors are equal if the magnitude and the direction are equal, or
-two vectors are equal if every element in these two vectors in the positions of its column are equal.
+In Euclidean \(m\)-space, two vectors are equal if the magnitude and the direction are equal, or
+two vectors are equal if every element in these two vectors at the same index are equal.
 
 %--------------------------------------------------------------------------------
 \section{Perform the following computation with vector operations}
